homelab/alertmanager-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager-virtualservice 
spec:
  hosts:
  - "alertmanager.192.168.87.3.nip.io"
  gateways:
  - alertmanager-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-alertmanager
