homelab/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtualservice
spec:
  hosts:
  - "grafana.192.168.87.3.nip.io"
  gateways:
  - grafana-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-grafana
